- Started homeScreen     - Will take some time to figure out how to make it identical to iPhone, as in, make it scrollable like on iPhone - Made the contact screen, though it does not do anything - At the moment, clicking an item in the homescreen, segues into contact. - Created a custom view that will act as a default list row for us. (Yes, android is not as easy as iPhone :( you need to create your own rows from scratch

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,20 @@
 <resources>
-    <string name="app_name">LyonsDen2_Android</string>
+    <string name="app_name">Lyon\'s Den</string>
+
+    <!-- Home Screen Strings -->
+    <string name="HomeScreenTitle">Home</string>
+    <string name="todayIsDay">Today is day</string>
+    <string name="dayLabelDefault">1</string>
+    <string name="courseCodeDefault">Course Code</string>
+    <string name="courseNameDefault">Course Name</string>
+    <string name="teacherNameDefault">Teacher Name</string>
+    <string name="roomNumberDefault">Room Number</string>
+
+    <!-- Contact Screen Strings -->
+    <string name="ContactScreenTitle">Contact</string>
+    <string name="getInTouchWithMac">Get in touch with Mac!</string>
+    <string name="announcementButton">Propose Announcement</string>
+    <string name="radioButton">Propose Song for Radio</string>
+    <string name="teacherButton">Contact a Teacher</string>
+    <string name="emergencyButton">Emergency Hotline</string>
 </resources>
