- Navigation Drawer (side menu) fully implemented     - To make it more code efficient I flooded home screen with all of the necessary code and simply call it from there.     - For some reason the Navigation Drawer is accessible from almost anywhere (even where its not supposed to be available)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
     <string name="app_name">Lyon\'s Den</string>
+    <string name="drawerOpen">Navigation Drawer Open</string>
+    <string name="drawerClose">Navigation Drawer Close</string>
 
     <!-- Home Screen Strings -->
     <string name="HSTodayIsDay">Today is day</string>
