- Splash Screen has been created     - Its drawable needs to be resized     - It looks different, so I might try a different colouring on android, to see how it will look - Login Screen has been created     - Doesn't do anything atm, just press Login and skip it     - Need to implement the Segmented Control into it - Tested InfoActivity - Create MusicActivity, though its empty atm

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,10 @@
     <string name="drawerOpen">Navigation Drawer Open</string>
     <string name="drawerClose">Navigation Drawer Close</string>
 
+    <!-- Login Screen Strings -->
+    <string name="LSLoginHint">Enter e-mail here</string>
+    <string name="LSPassHint">Enter password here</string>
+
     <!-- Home Screen Strings -->
     <string name="HSTodayIsDay">Today is day</string>
     <string name="HSDayLabelDefault">1</string>
