- Imported Firebase into the project     - Some device setup may be necessary - Implemented the Clubs and Events section     - InfoActivity now works properly, with its repositioning (All Hail LinearLayout!!!)     - ClubActivity has been created - Implemented Firebase into Clubs and Events section     - They are now fully web-based     - Will need to make minor string-manipulation adjustments for more accurate output

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,8 @@
     <string name="ISDescriptionDefault">Description goes here</string>
     <string name="ISTimeDefault">Time goes here</string>
     <string name="ISLocationDefault">Location goes here</string>
+    <string name="ISImageContentDescription">A picture of the event</string>
+
+    <!-- Club Info Screen Strings -->
+    <string name="ClubSMemberButton">Members</string>
 </resources>
