- Announcement submission is complete for android, Minor visual tweaks are required     - Display loading wheel when submitting     - Change the date/time picker's colors - Created Announcements section - Created an entry for user, doesnt do anything atm (Called it "Me", just trying things out)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,7 +25,13 @@
     <!-- Announcement Proposal Screen Strings -->
     <string name="APSTitle">Title:</string>
     <string name="APSDescription">Description:</string>
+    <string name="APSLocation">Location:</string>
     <string name="APSTeacher">Teacher Approval Login:</string>
+    <string name="APSRequiredHint">Required</string>
+    <string name="APSOptionalHint">Optional</string>
+    <string name="APSDateButtonText">Pick a Date</string>
+    <string name="APSTimeButtonText">Pick a Time</string>
+    <string name="APSSubmitButtonText">Submit</string>
 
     <!-- Info Screen Strings -->
     <string name="ISTitleDefault">Title goes here</string>
