- Contact now has retractable extra buttons - Added additional functionality to Retrieve     - Retrieve now has a pixel height calculator for a given text     - Retrieve now has a method that returns the pixel size of the screen     - Retrieve now has a method that returns the OpenSans typeface         - OpenSans-Light has been added to the repository - The app icon has been added and set

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,6 +41,8 @@
     <string name="CSTeacherButton">Contact a Teacher</string>
     <string name="CSEmergencyButton">Emergency Hotline</string>
     <string name="CSReport">Report a Bug</string>
+    <string name="CSHelp">Help</string>
+    <string name="CSLicence">Licences</string>
 
     <!-- Announcement Proposal Screen Strings -->
     <string name="APSTitleLabel">Title:</string>
