- Retrieve now has a method to retrieve the day of the day from a given dictionary - Clubs have almost been finished - Started working on sectioned lists - Toast View has been implemented     - Still needs some visulas changes - The database settings has been changed to a testing database

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,7 @@
     <string name="ISTitle">Announcement</string>
     <string name="LSTitleEvents">Announcements</string>
     <string name="LSTitleClubs">Clubs</string>
+    <string name="LVSTitle">Teachers</string>
 
     <!-- Login Screen Strings -->
     <string name="LSLoginHint">Enter e-mail here</string>
