time table + pop up window
Added pop up layout with functionality. Time table now loads all
required information from shared preferences, as well as pop up window
save all entered information into shared preferences. Option to make
period spare is added as well.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,6 +34,7 @@
     <string name="HSCourseNameDefault">Course Name</string>
     <string name="HSTeacherNameDefault">Teacher Name</string>
     <string name="HSRoomNumberDefault">Room Number</string>
+    <string name="HSSpare">SPARE</string>
 
     <!-- Contact Screen Strings -->
     <string name="CSGetInTouchWithMac">Get in touch with Mac!</string>
