- Updated App Icon - Made the app portrait mode fixed - Fixed an offline issue in Home - Minor changes to ClubActivity - Contact Pull up now fixed - User:     - Pull up now fixed     - Info Editing fixed     - Added confirmation dialog before pass reset and account delete     - signout crash fixed - Removed title bar from login activity - Other changes and minor fixes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="editAction">Edit</string>
     <string name="addAction">Add</string>
     <string name="deleteButton">Delete</string>
+    <string name="doneAction">Done</string>
 
     <!-- Screen Titles -->
     <string name="HSTitle">Home</string>
