- Swapped drawables of most buttons for vector images (save on disk space) - Added a dialog that displays a schedule for late starts, on late starts - Fixed textViewerActivity, it now works - Made LyonsAlert more customizable - Removed many unused files

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,6 +38,8 @@
     <string name="HSRoomNumberDefault">Room Number</string>
     <string name="HSSpare">SPARE</string>
     <string name="HSNoInternetLabel">No Internet available, please connect to the internet!</string>
+    <string name="HSLateStart">Late Start</string>
+    <string name="HSSpecSchedule">Special Schedule</string>
 
     <!-- Contact Screen Strings -->
     <string name="CSGetInTouchWithMac">Get in touch with Mac!</string>
