- Replaced guide images - Implemented pull to refresh in all lists - Fixed the layout of the late start schedule dialog - Made the closing button for guide to be at the center - Fixed guide not showing up after info form bug - Fixed the home opening twice bug - The notification prompt now occurs in home screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -148,4 +148,14 @@
     <string name="Page7">Post announcements from your phone, anytime, anywhere.</string>
     <string name="Page8">You may enter the Den.</string>
     <string name="Swipe">Swipe left to continue</string>
+
+    <!-- Late Start Schedule Strings -->
+    <string name="LateSTitle">Late Start Day Schedule</string>
+    <string name="LateSPer1">Period 1:</string>
+    <string name="LateSPer2">Period 2:</string>
+    <string name="LateSLunch">Lunch:</string>
+    <string name="LateSPer3">Period 3:</string>
+    <string name="LateSPer4">Period 4:</string>
+    <string name="LateSTimeSeparator">–</string>
+
 </resources>
