- Retrieve added a removeOneSignalIds method for notification switch in User - AnnouncementActivity only pushes notifications from propose announcement, not clubs - ClubActivity complete/edit button change - InformationFormActivity invalid field indicator changed - UserActivity notification toggle switch added to receive or not receive notifications from announcements - XMLs added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -85,6 +85,7 @@
     <string name="USDeleteButtonText">Delete Account</string>
     <string name="USSignOutButtonText">Sign Out</string>
     <string name="USResetPassButtonText">Reset Password</string>
+    <string name="USSwitchLabel">Allow Notifications</string>
 
     <!-- Information Activity Strings -->
     <string name="IFSName">Name</string>
