--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -133,6 +133,7 @@
     <string name="CourseSRoom">Room Number</string>
     <string name="CourseSRoomHint">eg. Rm 201</string>
     <string name="CourseSSubmitButtonText">Submit</string>
+    <string name="CourseSSpareButtonText">Spare</string>
     <string name="CourseSDisclaimer">The information you provide for each course is for your benefit only. Whether the information you input is correct or not is up to you. The system will function as designed, regardless of your input.</string>
 
     <!-- Course View Strings -->
